syntax = "proto3";

package api;

option go_package = "github.com/SplitStackServer/splitstack-grpc-api/go/api";
option java_package = "io.splitstack.api";
option java_multiple_files = true;
option java_outer_classname = "ApplicationIntegrationProto";
option csharp_namespace = "SplitStackServer.Api";
option php_namespace = "SplitStackServer\\Api";
option php_metadata_namespace = "GPBMetadata\\SplitStackServer\\Api";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "api/common.proto";


// ApplicationIntegrationService is the service providing API methods for managing applications.
service ApplicationIntegrationService {
    // Create creates the given integration for an application.
    rpc CreateApplicationIntegration(CreateApplicationIntegrationRequest) returns (CreateApplicationIntegrationResponse) {
        option (google.api.http) = {
        post : "/api/applications/{application_id}/integrations"
        body : "*"
        };
    }

    // Get the application for the given ID.
    rpc GetApplicationIntegration(GetApplicationIntegrationRequest) returns (GetApplicationIntegrationResponse) {
        option (google.api.http) = {
        get : "/api/applications/{application_id}/integrations/{integration_id}"
        };
    }

    // Update updates the given application.
    rpc UpdateApplicationIntegration(UpdateApplicationIntegrationRequest) returns (UpdateApplicationIntegrationResponse) {
        option (google.api.http) = {
        put : "/api/applications/{application_id}/integrations/{integration_id}"
        body : "*"
        };
    }

    // Delete the application for the given ID.
    rpc DeleteApplicationIntegration(DeleteApplicationIntegrationRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
        delete : "/api/applications/{application_id}/integrations/{integration_id}"
        };
    }

    // Get the list of applications.
    rpc ListApplicationIntegrations(ListApplicationIntegrationsRequest) returns (ListApplicationIntegrationsResponse) {
        option (google.api.http) = {
        get : "/api/applications/{application_id}/integrations"
        };
    }

    // Get the application integration token. It is used for authenticating when using the WebSocket integration.
    //
    // Note: WebSocket integration must be enabled in the server configuration.
    rpc GetApplicationIntegrationToken(GetApplicationIntegrationTokenRequest) returns (ApplicationIntegrationTokenResponse) {
        option (google.api.http) = {
        get : "/api/applications/{application_id}/integrations/token"
        };
    }

    // Reset the application integration token. It is used for authenticating when using the WebSocket integration.
    //
    // Note: WebSocket integration must be enabled in the server configuration.
    rpc ResetApplicationIntegrationToken(ResetApplicationIntegrationTokenRequest) returns (ApplicationIntegrationTokenResponse) {
        option (google.api.http) = {
        delete : "/api/applications/{application_id}/integrations/token"
        };
    }

}

message ApplicationIntegration {
    // Application ID (UUID).
    string application_id = 1;

    // Integration ID (UUID).
    string integration_id = 2;

    // Name of the integration.
    string name = 3;

    // Active status of the integration.
    bool active = 4;

    // Integration kind.
    IntegrationKind kind = 5;


    // Configuration for the different integration kinds.
    oneof config {
        IntegrationHttpPushConfiguration http_push_config = 6;
        IntegrationInfluxDbConfiguration influx_db_config = 7;
        IntegrationThingsBoardConfiguration things_board_config = 8;
    }
}

message IntegrationHttpPushConfiguration {
    // URL to send HTTP POST requests to.
    string url = 1;
    // Optional HTTP headers to include in the requests.
    map<string, string> headers = 2;
    // Use JSON format for the payload.
    bool use_json = 3;
}

message IntegrationInfluxDbConfiguration {
    // URL to send data to InfluxDB.
    string url = 1;
    // Token for authentication.
    string token = 2;
    // Organization name.
    string organization = 3;
    // Bucket name.
    string bucket = 4;
    // Include raw payload in the data.
    bool include_raw_payload = 5;
}

message IntegrationThingsBoardConfiguration {
    // URL to send data to ThingsBoard.
    string url = 1;

    // Silently ignore missing ThingsBoardAccessToken on devices.
    bool ignore_missing_token = 2;

    // Include raw payload in the data.
    bool include_raw_payload = 3;

}


message ApplicationIntegrationListItem {
    // Application ID (UUID).
    string application_id = 1;

    // Integration ID (UUID).
    string integration_id = 2;

    // Name of the integration.
    string name = 3;

    // Active status of the integration.
    bool active = 4;

    // Integration kind.
    IntegrationKind kind = 5;

    // Created at timestamp.
    google.protobuf.Timestamp created_at = 6;

    // Last update timestamp.
    google.protobuf.Timestamp updated_at = 7;
}

message CreateApplicationIntegrationRequest {
    // Application ID (UUID).
    string application_id = 1;

    // Name of the integration.
    string name = 2;

    // Configuration for the different integration kinds.
    oneof config {
        IntegrationHttpPushConfiguration http_push_config = 3;
        IntegrationInfluxDbConfiguration influx_db_config = 4;
        IntegrationThingsBoardConfiguration things_board_config = 5;
    }
}

message CreateApplicationIntegrationResponse {
    // Created ApplicationIntegration object.
    ApplicationIntegration integration = 1;

    // Created at timestamp.
    google.protobuf.Timestamp created_at = 2;
}

message GetApplicationIntegrationRequest {
    // Application ID (UUID).
    string application_id = 1;

    // Integration ID (UUID).
    string integration_id = 2;
}

message GetApplicationIntegrationResponse {
    // ApplicationIntegration object.
    ApplicationIntegration integration = 1;

    // Created at timestamp.
    google.protobuf.Timestamp created_at = 2;

    // Last update timestamp.
    google.protobuf.Timestamp updated_at = 3;

}

message UpdateApplicationIntegrationRequest {
    // Application ID (UUID).
    string application_id = 1;

    // Integration ID (UUID).
    string integration_id = 2;

    // Name of the integration.
    optional string name = 3;

    // Active status of the integration.
    optional bool active = 4;

    // Configuration for the different integration kinds. Switching kind is not allowed.
    oneof config {
        IntegrationHttpPushConfiguration http_push_config = 6;
        IntegrationInfluxDbConfiguration influx_db_config = 7;
        IntegrationThingsBoardConfiguration things_board_config = 8;
    }

}

message UpdateApplicationIntegrationResponse {
    // ApplicationIntegration object.
    ApplicationIntegration integration = 1;

    // Created at timestamp.
    google.protobuf.Timestamp created_at = 2;

    // Last update timestamp.
    google.protobuf.Timestamp updated_at = 3;
}

message DeleteApplicationIntegrationRequest {
    // Application ID (UUID).
    string application_id = 1;

    // Integration ID (UUID).
    string integration_id = 2;
}

message ListApplicationIntegrationsRequest {
    // Application ID (UUID) to filter integrations on. 
    string application_id = 1;

    // Pagination. Defaults to 100 objects at page index 0.
    Paginator paginator = 2;

    // If set, the given string will be used to search on name (optional).
    optional string search_name = 3;

    // If set, the given active status will be used to filter on (optional).
    optional bool is_active = 4;

    // If set, the given integration type will be used to filter on (optional).
    optional IntegrationKind integration_kind = 5;
}

message ListApplicationIntegrationsResponse {
    // Pagination.
    Pagination pagination = 1;

    // Result-set.
    repeated ApplicationIntegrationListItem result = 2;
}

message GetApplicationIntegrationTokenRequest {
    // Application ID (UUID).
    string application_id = 1;
}


message ResetApplicationIntegrationTokenRequest {
    // Application ID (UUID).
    string application_id = 1;
}

message ApplicationIntegrationTokenResponse {
    // Application ID (UUID).
    string application_id = 1;
    // Integration token.
    string token = 2;
}
