syntax = "proto3";

package api;

option go_package = "github.com/SplitStackServer/splitstack-grpc-api/go/api";
option java_package = "io.splitstack.api";
option java_multiple_files = true;
option java_outer_classname = "TenantUserProto";
option csharp_namespace = "SplitStackServer.Api";
option php_namespace = "SplitStackServer\\Api";
option php_metadata_namespace = "GPBMetadata\\SplitStackServer\\Api";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "api/common.proto";

// TenantUserService is the service providing API methods for managing tenant users.
service TenantUserService {
  
  // Add an user to the tenant.
  // Note: the user must already exist.
  rpc AddTenantUser(AddTenantUserRequest) returns (AddTenantUserResponse) {
    option (google.api.http) = {
      post : "/api/tenants/{tenant_id}/users"
      body : "*"
    };
  }

  // Get the the tenant user for the given tenant and user IDs.
  rpc GetTenantUser(GetTenantUserRequest) returns (GetTenantUserResponse) {
    option (google.api.http) = {
      get : "/api/tenants/{tenant_id}/users/{user_id}"
    };
  }

  // Update the given tenant user.
  rpc UpdateTenantUser(UpdateTenantUserRequest) returns (UpdateTenantUserResponse) {
    option (google.api.http) = {
      put : "/api/tenants/{tenant_id}/users/{user_id}"
      body : "*"
    };
  }

  // Delete the given tenant user.
  rpc DeleteTenantUser(DeleteTenantUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete : "/api/tenants/{tenant_id}/users/{user_id}"
    };
  }

  // Get the list of tenant users.
  rpc ListTenantUsers(ListTenantUsersRequest) returns (ListTenantUsersResponse) {
    option (google.api.http) = {
      get : "/api/tenants/{tenant_id}/users"
    };
  }
}

message TenantUser {
  // Tenant ID (UUID).
  string tenant_id = 1;

  // User ID (UUID).
  string user_id = 2;

  // User is admin within the context of the tenant.
  // There is no need to set the is_endnode_admin and is_basestation_admin flags.
  bool is_admin = 3;

  // User is able to modify device related resources (applications,
  // device-profiles, devices, multicast-groups).
  bool is_endnode_admin = 4;

  // User is able to modify gateways.
  bool is_basestation_admin = 5;
}

message TenantUserListItem {
  // Tenant ID (UUID).
  string tenant_id = 1;

  // User ID (UUID).
  string user_id = 2;

  // Created at timestamp.
  google.protobuf.Timestamp created_at = 3;

  // Last update timestamp.
  google.protobuf.Timestamp updated_at = 4;

  // User Email
  string email = 5;

  // User is admin within the context of the tenant.
  // There is no need to set the is_endnode_admin and is_basestation_admin flags.
  bool is_admin = 6;

  // User is able to modify device related resources (applications,
  // device-profiles, devices, multicast-groups).
  bool is_endnode_admin = 7;

  // User is able to modify gateways.
  bool is_basestation_admin = 8;
}

message AddTenantUserRequest {
  // Tenant ID (UUID).
  string tenant_id = 1;

  // User ID (UUID).
  string user_id = 2;

  // User is admin within the context of the tenant.
  // There is no need to set the is_endnode_admin and is_basestation_admin flags.
  bool is_admin = 3;

  // User is able to modify device related resources (applications,
  // device-profiles, devices, multicast-groups).
  bool is_endnode_admin = 4;

  // User is able to modify gateways.
  bool is_basestation_admin = 5;
}


message AddTenantUserResponse {
  // Tenant user object.
  TenantUser tenant_user = 1;

  // Created at timestamp.
  google.protobuf.Timestamp created_at = 2;
}

message GetTenantUserRequest {
  // Tenant ID (UUID).
  string tenant_id = 1;

  // User ID (UUID).
  string user_id = 2;
}

message GetTenantUserResponse {
  // Tenant user object.
  TenantUser tenant_user = 1;

  // Created at timestamp.
  google.protobuf.Timestamp created_at = 2;

  // Last update timestamp.
  google.protobuf.Timestamp updated_at = 3;
}

message UpdateTenantUserRequest {
  // Tenant ID (UUID).
  string tenant_id = 1;

  // User ID (UUID).
  string user_id = 2;

  // User is admin within the context of the tenant.
  // There is no need to set the is_endnode_admin and is_basestation_admin flags.
  optional bool is_admin = 3;

  // User is able to modify device related resources (applications,
  // device-profiles, devices, multicast-groups).
  optional bool is_endnode_admin = 4;

  // User is able to modify gateways.
  optional bool is_basestation_admin = 5;
}

message UpdateTenantUserResponse {
  // Tenant user object.
  TenantUser tenant_user = 1;

  // Created at timestamp.
  google.protobuf.Timestamp created_at = 2;

  // Last update timestamp.
  google.protobuf.Timestamp updated_at = 3;
}

message DeleteTenantUserRequest {
  // Tenant ID (UUID).
  string tenant_id = 1;

  // User ID (UUID).
  string user_id = 2;
}

message ListTenantUsersRequest {
  // Tenant ID (UUID).
  string tenant_id = 1;

  // Pagination. Defaults to 100 objects at page index 0.
  Paginator paginator = 2;
}

message ListTenantUsersResponse {
  // Pagination.
  Pagination pagination = 1;

  // Result-set.
  repeated TenantUserListItem result = 2;
}

