syntax = "proto3";

package integration;

option go_package = "github.com/SplitStackServer/splitstack-grpc-api/integration";
option java_package = "io.splitstack.integration";
option java_multiple_files = true;
option java_outer_classname = "CommonProto";
option csharp_namespace = "SplitStackServer.Integration";
option php_namespace = "SplitStackServer\\Integration";
option php_metadata_namespace = "GPBMetadata\\SplitStackServer\\Integration";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

import "integration/common.proto";
import "bs/basestation.proto";

// BasestationVmStatusEvent is the message sent when a basestation variable mac status event has been received.
message BasestationVmStatusEvent {
  // Uplink ID (UUID).
  string uplink_id = 1;

  // Timestamp.
  google.protobuf.Timestamp time = 2;

  // Basestation information.
  BasestationInfo basestation_info = 3;

  // Message.
  bs.BasestationVariableMacStatus msg = 4;

}

    