syntax = "proto3";

package integration;

option go_package = "github.com/SplitStackServer/splitstack-grpc-api/go/integration";
option java_package = "io.splitstack.integration";
option java_multiple_files = true;
option java_outer_classname = "DownlinkCommandProto";
option csharp_namespace = "SplitStackServer.Integration";
option php_namespace = "SplitStackServer\\Integration";
option php_metadata_namespace = "GPBMetadata\\SplitStackServer\\Integration";


import "google/protobuf/struct.proto";



// DownlinkCommand is the command to enqueue a downlink payload for the given
// device.
message DownlinkCommand {
  // ID (UUID).
  // If left blank, a random UUID will be generated.
  optional string id = 1;

  // Device (EUI64).
  string device_eui = 2;

  // Confirmed.
  bool confirmed = 3;

  // Data.
  // Or use the json_object field when a codec has been configured.
  optional bytes data = 5;

  // Only use this when a codec has been configured that can encode this
  // object to bytes.
  optional google.protobuf.Struct object = 6;
}
