syntax = "proto3";

package integration;

option go_package = "github.com/SplitStackServer/splitstack-grpc-api/go/integration";
option java_package = "io.splitstack.integration";
option java_multiple_files = true;
option java_outer_classname = "EndnodeUplinkEventProto";
option csharp_namespace = "SplitStackServer.Integration";
option php_namespace = "SplitStackServer\\Integration";
option php_metadata_namespace = "GPBMetadata\\SplitStackServer\\Integration";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

import "integration/common.proto";
import "common/common.proto";
import "bs/endnode.proto";

// EndnodeUplinkEvent is the message sent when an uplink payload has been received.
message EndnodeUplinkEvent {
  // Deduplication ID (UUID).
  string deduplication_id = 1;

  // Timestamp.
  google.protobuf.Timestamp time = 2;

  // Device information.
  DeviceInfo device_info = 3;

  // Packet counter.
  uint32 packet_cnt = 4;

  // Mac Payload Format byte, valid range from 0 to 255.
  uint32 mpf_byte  = 5;

    // Mac Payload Format name.
  common.MacPayloadFormat mpf_name  = 6;

  // Uplink was of type confirmed.
  bool confirmed = 7;

  // True if device supports downlinks for this uplink.
  bool dl_open = 8;

  // Backend ID.
  string backend_id = 9;

  // Region.
  common.Region region = 10;

  // TS-UNB mode.
  optional common.TsUnbMode mode = 11;

  // Payload data.
  bytes data = 12;

  // Note that this is only set when a codec is configured in the Device
  // Profile.
  optional google.protobuf.Struct measurements = 13;

  // RX meta-data.
  // The key is the Base Station EUI as hex string.
  map<string, bs.EndnodeUplinkMetadata> metadata = 14;

}

    