syntax = "proto3";

package integration;

option go_package = "github.com/SplitStackServer/splitstack-grpc-api/go/integration";
option java_package = "io.splitstack.integration";
option java_multiple_files = true;
option java_outer_classname = "VariableMacUplinkEventProto";
option csharp_namespace = "SplitStackServer.Integration";
option php_namespace = "SplitStackServer\\Integration";
option php_metadata_namespace = "GPBMetadata\\SplitStackServer\\Integration";

import "google/protobuf/timestamp.proto";

import "common/common.proto";
import "bs/endnode.proto";

// VariableMacUplinkEvent is the message sent when an uplink with Variable MAC payload has been received.
message VariableMacUplinkEvent {
  // Deduplication ID (UUID).
  string deduplication_id = 1;

  // Timestamp.
  google.protobuf.Timestamp time = 2;

  // Received Variable Mac Uplink Message.
  bs.EndnodeVariableMacUlDataMessage message = 3;

  // Variable Mac Type
  uint32 vm_type = 4;


  // Mbus Header if the message contains M-Bus data
  common.MbusHeader mbus_header = 5;

  // RX meta-data.
  // The key is the Base Station EUI as hex string.
  map<string, bs.EndnodeUplinkMetadata> metadata = 6;

  // Backend ID.
  string backend_id = 7;

  // Region.
  common.Region region = 8;


}

    